<resources>
    <string name="app_name">LaunchModeDemo</string>

    <string name="mode_standard">Standard</string>
    <string name="mode_single_top">Single Top</string>
    <string name="mode_single_task">Single Task</string>
    <string name="mode_single_instance">Single Instance</string>

    <string name="mode_single_task_with_affinity">Single Task With taskAffinity</string>
    
</resources>
